# requests-jwtauth

./: .gitignore  README.md  pyproject.toml
src/requests_jwtauth/: __init__.py  requests_jwtauth.py
tests/: test_auth.py
