[project]
name = "requests-jwtauth"
version = "1.0.0"
description = "Authenticator plugins for Requests that support JWT bearer tokens"
readme = "README.md"
dependencies = [
    "jwcrypto",
    "requests"
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
]
